# krp-cdp-contracts

./: .gitignore  README.md  REDME.md
artifacts/: cdp_central_control.wasm  cdp_custody.wasm  cdp_liquidation_queue.wasm  cdp_reward_book.wasm  cdp_stable_pool.wasm  cdp_staking_reward.wasm  checksums.txt  checksums_intermediate.txt
contracts/central_control/: Cargo.toml  README.rd
contracts/central_control/examples/: schema.rs
contracts/central_control/schema/: cdp_central_control.json
contracts/central_control/schema/raw/: execute.json  instantiate.json  query.json  response_to_collateral_elem.json  response_to_config.json  response_to_whitelist.json
contracts/central_control/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/central_control/src/testing/: tests.rs
contracts/custody/: Cargo.toml
contracts/custody/examples/: schema.rs
contracts/custody/schema/: cdp_custody.json
contracts/custody/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/liquidation_queue/: Cargo.toml
contracts/liquidation_queue/examples/: schema.rs
contracts/liquidation_queue/schema/: cdp-liquidation-queue.json
contracts/liquidation_queue/src/: asserts.rs  bid.rs  contract.rs  error.rs  lib.rs  query.rs  state.rs
contracts/reward_book/: Cargo.toml
contracts/reward_book/examples/: schema.rs
contracts/reward_book/schema/: cdp_reward_book.json
contracts/stable_pool/: Cargo.toml
contracts/staking_reward/: Cargo.toml  README.rd
deployment/: .env  .env.example  common.ts  deploy_local.ts  package-lock.json  package.json  tsconfig.json
(+47 files in other folders)
