[package]
name = "cdp_central_control"
version = "0.0.1"
authors = ["<smith@kryptonite.finance>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cdp = { path = "../../packages/cdp", default-features = false, version = "0.0.1"}
cosmwasm-std = "1.0.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.37"
cosmwasm-storage = { version = "1.0.0" }
cw20 = { version = "0.16.0" }
cosmwasm-bignumber =  { path = "../../packages/bignumber", version = "3.0.0"}
cosmwasm-schema = { version = "1.0.10" }

[dev-dependencies]


